src/main/java/com/example/vmrentalrest/exceptions/invalidParametersExceptions/InvalidDatesException.java
package com.example.vmrentalrest.exceptions.invalidParametersExceptions;

public class InvalidDatesException extends InvalidParametersException {
    public InvalidDatesException() {
        super("The dates are invalid");
    }
}
